--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -16,7 +16,7 @@
 // Font Awesome
 @import "fontawesome";
 
-input[type="text"], input[type="password"], input[type="search"] {
+input[type="text"], input[type="number"], input[type="password"], input[type="search"] {
 	height: 30px
 }
 
@@ -30,4 +30,9 @@ body, table {
 
 .navbar .nav > li > a{
 	padding: 10px 10px 10px
+}
+
+textarea {
+	width: 340px;
+	height: 175px;
 }
