--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -10,11 +10,13 @@ img
   border: 0px
 
 body
-  background-color: $fundo 
-
+  background-color: $fundo   
 
 #topo
   float: left
+
+.bold
+  font-weight: bold
 
 .logo
   top: 4px
@@ -27,6 +29,7 @@ body
 #todo
   float: right
   width: 745px
+  padding-bottom: 35px
 
 .title
   font-size: 28px
@@ -65,7 +68,7 @@ footer
   position: absolute
 
 .login
-  margin-left: 35%
+  margin-left: 34%
   width: 200px  
 
 p.info
