--- a/app/views/coletas/_form.html.haml
+++ b/app/views/coletas/_form.html.haml
@@ -1,16 +1,25 @@
 = form_for @coleta, :html => { :class => 'form-horizontal' } do |f|
+
   .control-group
-    = f.label :data, :class => 'control-label'
+    = f.label :local, :class => 'control-label'
     .controls
-      = f.date_select :data, :class => 'date_select'
+      = f.text_area :local, :class => 'text_field'
+
+  .control-group
+    = f.label :local, :class => 'control-label'
+    .controls
+      = f.number_field :local, :class => 'number_field'
+
+  .control-group
+    = f.label :algas, :class => 'control-label'
+    .controls
+      = f.check_box :algas, :class => 'checkbox'
+
   .control-group
     = f.label :info, :class => 'control-label'
     .controls
       = f.text_area :info, :class => 'text_area'
-  .control-group
-    = f.label :escola_id, :class => 'control-label'
-    .controls
-      = f.number_field :escola_id, :class => 'number_field'
+
   .form-actions
-    = f.submit nil, :class => 'btn btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), coletas_path, :class => 'btn'
+    = f.hidden_field :escola_id, :value => current_user.escola.id
+    = f.submit "Salvar", :class => 'btn btn-primary'    
