--- a/app/views/coletas/new.html.haml
+++ b/app/views/coletas/new.html.haml
@@ -1,4 +1,2 @@
-- model_class = Coletum
-.page-header
-  %h1=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human
+%h3 Nova Coleta
 = render :partial => "form"
