--- a/app/views/escolas/_form.html.haml
+++ b/app/views/escolas/_form.html.haml
@@ -1,3 +1,9 @@
+- unless @escola.errors.empty?
+  .alert.alert-error
+    %button.close{"data-dismiss" => "alert", :type => "button"} ×
+    - @escola.errors.full_messages.each do |msg|
+      %li= msg
+
 = form_for @escola, :html => { :class => 'form-horizontal' } do |f|
   .control-group
     = f.label :nome, :class => 'control-label'
