--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -9,17 +9,18 @@ img
   padding: 0px
   border: 0px
 
+.titulo
+  margin: 5px
+
 body
   background-color: $fundo   
-
-#topo
-  float: left
 
 .bold
   font-weight: bold
 
 .logo
-  top: 4px
+  top: 5px
+  margin-left: 10px
   position: absolute
 
 #meio
@@ -27,9 +28,8 @@ body
   margin: 10px auto
 
 #todo
-  float: right
-  width: 745px
-  padding-bottom: 35px
+  margin-left: 160px
+  padding-bottom: 25px
 
 .title
   font-size: 28px
@@ -38,29 +38,13 @@ body
 .subtitle
   font-size: 19px
 
-footer
-  font-size: 12px
-  color: #0050A7
-  height:  17px
-  padding: 4px
-  position: fixed
-  bottom: 0px
-  width: 100%
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fff), color-stop(100%, lightgray))
-  background: -webkit-linear-gradient(#fff, lightgray)
-  background: -moz-linear-gradient(#fff, lightgray)
-  background: -o-linear-gradient(#fff, lightgray)
-  background: linear-gradient(#fff, lightgray)
-  box-shadow: inset 0 1px 0 lightgray,0 2px 2px rgba(0,0,0,0.4)
-
 .semmargem
   margin: 0px
 
 .contato
   float: right
-  margin-right: 10px 
+  margin-right: 30px 
   margin-top: 2px
-  text-decoration: underline
 
 .rj
   width: 130px
@@ -77,7 +61,7 @@ p.info
 
 .avatar
   float: left  
-  margin: 15px
+  margin: 15px  
 
 #search-submit
   position: absolute
@@ -97,3 +81,28 @@ p.info
   background-repeat: no-repeat
   border: 0 none
   opacity: 0.75
+
+footer
+  color: #777777
+  text-decoration: none
+  text-shadow: 0 1px 0 #ffffff
+  font-size: 11px
+  height:  18px
+  padding-bottom: 4px
+  position: fixed
+  padding-left: 10px 
+  padding-right: 10px 
+  bottom: 0px
+  width: 100%
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fff), color-stop(100%, lightgray))
+  background: -webkit-linear-gradient(#fff, lightgray)
+  background: -moz-linear-gradient(#fff, lightgray)
+  background: -o-linear-gradient(#fff, lightgray)
+  background: linear-gradient(#fff, lightgray)
+  box-shadow: inset 0 1px 0 lightgray,0 2px 2px rgba(0,0,0,0.4)
+
+  .extrapolo
+    color: gray
+    font-size: 11px
+    margin-bottom: 5px
+    float: left
