--- a/app/views/coletas/edit.html.haml
+++ b/app/views/coletas/edit.html.haml
@@ -1,4 +1,3 @@
-- model_class = Coletum
-.page-header
-  %h1=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human
+%h3 Editar Coleta
+%hr
 = render :partial => "form"
