logos de realizacao

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -46,11 +46,6 @@ body
   margin-right: 30px 
   margin-top: 2px
 
-.rj
-  width: 130px
-  bottom: 27px
-  position: absolute
-
 .login
   margin-left: 34%
   width: 200px  
@@ -106,3 +101,6 @@ footer
     font-size: 11px
     margin-bottom: 5px
     float: left
+
+#realizacao
+  margin-top: 10px
