ajuste em logos

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -20,7 +20,7 @@ body
 
 .logo
   top: 5px
-  margin-left: 10px
+  margin-left: 30px
   position: absolute
 
 #meio
@@ -28,8 +28,8 @@ body
   margin: 10px auto
 
 #todo
-  margin-left: 160px
-  padding-bottom: 25px
+  width: 755  
+  margin-left: 150px
 
 .title
   font-size: 28px
@@ -102,5 +102,6 @@ footer
     margin-bottom: 5px
     float: left
 
-#realizacao
-  margin-top: 10px
+.realizacao
+  float: right
+  padding-bottom: 20px
