--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,12 +10,10 @@
     
     %body
       #meio      
-        .logo
-          = image_tag "logo.png"
-          #realizacao= image_tag "realizacao.png"
-        #menu= render :partial => "pages/menu"        
+        .logo= image_tag "logo.png"
+        #menu= render :partial => "pages/menu"       
         #todo= yield
-
+        .realizacao= image_tag "logos.png"
       %footer        
         %span{:style=>"float:left; margin: 2px"}          
           Agenda Água na Escola - ASSEAGUA / SEE / SEA - RJ
