deploy com tmp e ajuste em rodape

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,7 +18,7 @@
         %span{:style=>"float:left; margin: 2px"}          
           Agenda Água na Escola - 2013
         .contato
-          %span.extrapolo ExtraPolo! Labs
+          %span.extrapolo ExtraPolo Labs
           %span{:style=>"margin: 0px 6px 0px 6px"}= '|'
           %i.icon-envelope
           %a{:href=>"/sobre"}
