mudanca em rodape

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,7 +16,7 @@
         .realizacao= image_tag "logos.png"
       %footer        
         %span{:style=>"float:left; margin: 2px"}          
-          Agenda Água na Escola - 2013
+          Agenda Água na Escola - INEA/RJ
         .contato
           %span.extrapolo ExtraPolo Labs
           %span{:style=>"margin: 0px 6px 0px 6px"}= '|'
