--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -5,10 +5,19 @@
     %li{"data-slide-to" => "2", "data-target" => "#myCarousel"}
   .carousel-inner
     .item.active
-      %img{:alt => "", :src => "assets/1.jpg"}/
+      = image_tag "lagoa-rodrigo-de-freitas.jpg"
+
+      #texto
+        %br
+        %p A Educação Ambiental nas Escolas ocorre mediante a utilização de ferramentas que visam informar e sensibilizar as crianças sobre a questão ambiental com foco na sustentabilidade ambiental, no abastecimento de água e esgotamento sanitário mostrando a importância da melhoria das nossas práticas sobre o meio ambiente e considerando que essas crianças serão excelentes multiplicadores deste conhecimento.
+
+        %p Uma das ferramentas utilizadas para o desenvolvimento do conhecimento se dá por meio da utilização de Kits de análise. Estes kits são desenvolvidos para controle de qualidade da água, para ser utilizado, especialmente, por alunos a partir da quinta série ou comunidades em geral. As análises realizadas por estes kits (pH, fósforo total, nitrogênio amoniacal, cor, turbidez, Cloro livre, ferro, ortofosfato, nitrogênio amoniacal, cloreto, dureza total, oxigênio dissolvido, temperatura), demonstram a realidade do corpo d’água, e quais os caminhos deverão ser seguidos, visando a sua recuperação. Vale destacar que estes kits devem ser utilizados com o propósito de orientar e indicar para os seus usuários a presença/ausência de poluentes no corpo d’água, não podendo ser utilizados como punitivos. Esta restrição se dá pelo fato destes kits serem semi-quantitativos, ou seja, informam faixa de valores pré-determinadas. Para uma ação efetiva, com propósitos de fiscalização, deve-se recorrer a análises realizadas por laboratórios credenciados.
+
+        %p Após a análise realizada pelos kits, os participantes descobrem de imediato o estado em que a aquele corpo d’água se encontra, podendo assim discutir com os Educadores e refletir sobre as ações desejáveis.
+
       .carousel-caption
-        %h4 21 dez 2013 - Mapeamento em Lumiar 
-        %p Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.
+        %h4 21 Março 2013 - Educação Ambiental – Lagoa Rodrigo de Freitas
+        %p André / Gerência de Qualidade de Água / DIGAT / INEA
     .item
       %img{:alt => "", :src => "assets/2.jpg"}/
       .carousel-caption
