--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -50,6 +50,10 @@ body
   margin-left: 34%
   width: 200px  
 
+#texto
+  line-height: 16px
+  padding-bottom: 80px  
+
 p.info
   font-size: 12px
   text-align: center
@@ -105,7 +109,4 @@ footer
 .realizacao
   float: right
   padding-bottom: 20px
-
-#texto
-  line-height: 16px
-  padding-bottom: 80px
+  padding-top: 20px
