--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -52,7 +52,8 @@ body
 
 #texto
   line-height: 16px
-  padding-bottom: 80px  
+  padding-bottom: 80px
+  padding-top: 10px
 
 p.info
   font-size: 12px
