--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,9 +16,9 @@
         .realizacao= image_tag "logos.png"
       %footer        
         %span{:style=>"float:left; margin: 2px"}          
-          Agenda Água na Escola - INEA/RJ
+          Agenda Água na Escola - SEA/INEA/RJ
         .contato
-          %span.extrapolo ExtraPolo Labs
+          %span.extrapolo ExtraPolo Softwares Culturais
           %span{:style=>"margin: 0px 6px 0px 6px"}= '|'
           %i.icon-envelope
           %a{:href=>"/sobre"}
