--- a/app/views/pages/sobre.haml
+++ b/app/views/pages/sobre.haml
@@ -1,10 +1,7 @@
-%p O Programa Agenda Água na Escola foi criado em 2008 com o objetivo de fortalecer a Política de Gerenciamento de Recursos Hídricos do Estado do Rio de Janeiro.
-
-%p Com o apoio de entidades ambientalistas, prefeituras e usuários de água, oprograma oferece à comunidade escolar oficinas de mobilização e nivelamento da informação ambiental, vinculadas à manutenção e recuperação de corpos hídricos.
-
-%p Estudantes e profissionais de educação participam de expedições ambientais de monitoramento da qualidade da água de rios próximos à unidade de ensino e de campanhas de educação ambiental que incentivam escolas a adotar trechos de rios e a apoiar o órgão fiscalizador no controle da ocupação de suas faixas marginais de proteção (FMPs).
-
-%p O monitoramento da qualidade da água e o registro fotográfico feitos durante as expedições ambientais estão sendo importantes para a construção do Biomapa, documento que, quando finalizado, identificará os aspectos positivos e negativos dos corpos hídricos de determinada região.
+%p Iniciado em 2008, o Programa Agenda Água na Escola visa à formação de Jovens Gestores Ambientais das Águas e Florestas através de cursos, oficinas, e principalmente expedições ambientais de monitoramento da qualidade da água e de controle da ocupação e conservação da Faixa Marginal de Proteção dos rios. O Programa incentiva a adoção de trechos de rios pelas escolas para cuidar e preservar a água.
+%p “A água é um recurso essencial à vida, de disponibilidade limitada, dotada de valores econômico, social e ecológico...”, estabelece a Lei Federal e Estadual de Recursos Hídricos, portanto é nossa obrigação proteger esse recurso. O Programa Agenda Água na Escola é uma ação que fortalece os Comitês de Bacias e apoia a consolidação da Política Estadual de Gerenciamento de Recursos Hídricos, para que os jovens entendam o seu papel e possam participar dos comitês e apoiar projetos de recuperação ambiental desenvolvidos pelo setor público e privado.
+%p O conjunto de atividades desenvolvidas ajuda na construção de uma agenda de prioridades para recuperação dos rios, a Agenda Água propriamente dita, que busca soluções locais e busca consolidar uma rede de comunicação e divulgação de ações da bacia, a Rede Agenda Água na Escola. Ele foi desenvolvido em 15 municípios e pretende chegar a mais 31 municípios e pelo menos 110 unidades de ensino até 2014 com recursos do FECAM e FUNDRHI é coordenado pela SEA/INEA. 
+%p Atualmente são nossos parceiros regionais os comitês de bacia: CBH Guandu, CBH Médio Paraíba do Sul, CBH Baía da Ilha Grande, CBH Piabanha, CBH Dois Rios e CBH Baía de Guanabara, Agevap e as ONGs executoras Nosso Vale Nossa Vida, GEMA, Consórcio BNG2 e Associarte. As prefeituras de Resende, Porto Real, Petrópolis e Teresópolis.
 
 %a{:href=>'http://www.rj.gov.br/web/informacaopublica/exibeconteudo?article-id=1043683', :target=>"_blank", :class=>"btn"}
 	%i.icon-question-sign
