--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -16,8 +16,8 @@
         %p Após a análise realizada pelos kits, os participantes descobrem de imediato o estado em que a aquele corpo d’água se encontra, podendo assim discutir com os Educadores e refletir sobre as ações desejáveis.
 
       .carousel-caption
-        %h4 21 Março 2013 - Educação Ambiental – Lagoa Rodrigo de Freitas
-        %p André / Gerência de Qualidade de Água / DIGAT / INEA
+        %h4 21 de março - Educação Ambiental para Gestão de Recursos Hídricos
+        %p André / Gerência de Qualidade de Água / DIGAT/INEA
     .item
       %img{:alt => "", :src => "assets/2.jpg"}/
       .carousel-caption
