--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -18,9 +18,16 @@ body
 .bold
   font-weight: bold
 
+#logo
+  float: left
 .logo
   top: 5px
   margin-left: 22px
+  position: absolute
+
+iframe#f370085a8c.fb_ltr
+  margin-top: 280px
+  margin-left: 42px
   position: absolute
 
 #meio
