--- a/app/views/pessoas/show.html.haml
+++ b/app/views/pessoas/show.html.haml
@@ -5,7 +5,7 @@
 	%p 
 		%i.icon-briefcase
 		%span.bold Monitor
-		= "#{@pessoa.escola.nome} - #{@pessoa.escola.municipio}"
+		= "#{@pessoa.escola.nome} - #{@pessoa.escola.municipio}" if @pessoa.escola
 %hr
 
 - if @pessoa==current_user
