--- a/app/views/coletas/_form.html.haml
+++ b/app/views/coletas/_form.html.haml
@@ -4,175 +4,180 @@
     - @coleta.errors.full_messages.each do |msg|
       %li= msg
 
-= form_for @coleta, :html => { :class => 'form-horizontal form-inline' } do |f|
+- if !@coleta.id && current_user.escola==nil
+  .alert.alert-error
+    %button.close{"data-dismiss" => "alert", :type => "button"} ×
+    %li Somente Monitores de Escolas podem criar Coletas.
+- else
+  = form_for @coleta, :html => { :class => 'form-horizontal form-inline' } do |f|
 
-  .control-group
-    = f.label :local, :class => 'control-label'
-    .controls
-      = f.text_field :local, :class => 'text_field'
+    .control-group
+      = f.label :local, :class => 'control-label'
+      .controls
+        = f.text_field :local, :class => 'text_field'
 
-  .control-group
-    = f.label "Hora da Coleta", :class => 'control-label'
-    .controls
-      - now = Time.now.strftime("%d/%m/%Y %H:%M")
-      #coleta_datepicker.input-append.date        
-        %input{"data-format" => "dd/MM/yyyy hh:mm", :type => "text", :name=>"coleta[hora_coleta]", :value=>now}/
-        %span.add-on
-          %i{"data-date-icon" => "icon-calendar", "data-time-icon" => "icon-time"}
-        :javascript
-          $(document).ready(
-            function(){ $('#coleta_datepicker').datetimepicker({language: 'pt-BR'})}
-          );
+    .control-group
+      = f.label "Hora da Coleta", :class => 'control-label'
+      .controls
+        - now = Time.now.strftime("%d/%m/%Y %H:%M")
+        #coleta_datepicker.input-append.date        
+          %input{"data-format" => "dd/MM/yyyy hh:mm", :type => "text", :name=>"coleta[hora_coleta]", :value=>now}/
+          %span.add-on
+            %i{"data-date-icon" => "icon-calendar", "data-time-icon" => "icon-time"}
+          :javascript
+            $(document).ready(
+              function(){ $('#coleta_datepicker').datetimepicker({language: 'pt-BR'})}
+            );
 
-  %hr
-  // boleanos
-  .control-group{:style=>"font-size: 14px; padding-left: 180px"}
-    .checkbox 
-      Algas
-      = f.check_box :algas    
-    .checkbox
-      Espuma
-      = f.check_box :espuma
-    .checkbox
-      Corpos Flutuantes
-      = f.check_box :corpos_flutuantes
-    .checkbox
-      Material Sedimentável
-      = f.check_box :materialsedimentavel
-    .checkbox
-      Cheiro
-      = f.check_box :cheiro
-    .checkbox
-      Plantas Aquáticas
-      = f.check_box :plantas_aquaticas
-    .checkbox
-      Peixes e outros Animais
-      = f.check_box :peixes_animais
-    .checkbox
-      Cobertura Vegetal
-      = f.check_box :algas      
-  %hr
+    %hr
+    // boleanos
+    .control-group{:style=>"font-size: 14px; padding-left: 180px"}
+      .checkbox 
+        Algas
+        = f.check_box :algas    
+      .checkbox
+        Espuma
+        = f.check_box :espuma
+      .checkbox
+        Corpos Flutuantes
+        = f.check_box :corpos_flutuantes
+      .checkbox
+        Material Sedimentável
+        = f.check_box :materialsedimentavel
+      .checkbox
+        Cheiro
+        = f.check_box :cheiro
+      .checkbox
+        Plantas Aquáticas
+        = f.check_box :plantas_aquaticas
+      .checkbox
+        Peixes e outros Animais
+        = f.check_box :peixes_animais
+      .checkbox
+        Cobertura Vegetal
+        = f.check_box :algas      
+    %hr
 
-  .control-group
-    = f.label "Condições Climáticas", :class => 'control-label'
-    .controls
-      = f.text_field :condicoes_climaticas, :class => 'text_field'
+    .control-group
+      = f.label "Condições Climáticas", :class => 'control-label'
+      .controls
+        = f.text_field :condicoes_climaticas, :class => 'text_field'
 
-  .control-group
-    = f.label "Classe Coname", :class => 'control-label'
-    .controls
-      = f.text_field :classe_coname, :class => 'text_field'      
+    .control-group
+      = f.label "Classe Coname", :class => 'control-label'
+      .controls
+        = f.text_field :classe_coname, :class => 'text_field'      
 
-  // floats
+    // floats
 
-  .control-group
-    = f.label "Temperatura Água", :value=>"0", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :condicoes_climaticas, :step=>'0.1', :class => 'number_field'
-        %span.add-on C°
+    .control-group
+      = f.label "Temperatura Água", :value=>"0", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :condicoes_climaticas, :step=>'0.1', :class => 'number_field'
+          %span.add-on C°
 
-  .control-group
-    = f.label "Temperatura Ambiente", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :temperatura_ambiente, :step=>'0.1', :class => 'number_field'
-        %span.add-on C°
+    .control-group
+      = f.label "Temperatura Ambiente", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :temperatura_ambiente, :step=>'0.1', :class => 'number_field'
+          %span.add-on C°
 
-  .control-group
-    = f.label "pH", :class => 'control-label'
-    .controls
-      = f.number_field :ph, :step=>'0.1', :class => 'number_field'
-  
-  .control-group
-    = f.label "Oxigênio dissolvido", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :oxigenio_dissolvido, :step=>'0.1', :class => 'number_field'
-        %span.add-on mg/L O2
+    .control-group
+      = f.label "pH", :class => 'control-label'
+      .controls
+        = f.number_field :ph, :step=>'0.1', :class => 'number_field'
+    
+    .control-group
+      = f.label "Oxigênio dissolvido", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :oxigenio_dissolvido, :step=>'0.1', :class => 'number_field'
+          %span.add-on mg/L O2
 
-  .control-group
-    = f.label "Amônia", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :amonia, :step=>'0.1', :class => 'number_field'
-        %span.add-on mg/L N-NH4
-  
-  .control-group
-    = f.label "Ferro", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :ferro, :step=>'0.1', :class => 'number_field'
-        %span.add-on mg/L Fe2
+    .control-group
+      = f.label "Amônia", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :amonia, :step=>'0.1', :class => 'number_field'
+          %span.add-on mg/L N-NH4
+    
+    .control-group
+      = f.label "Ferro", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :ferro, :step=>'0.1', :class => 'number_field'
+          %span.add-on mg/L Fe2
 
-  .control-group
-    = f.label "Fosfato", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :fosfato, :step=>'0.1', :class => 'number_field'
-        %span.add-on mg/L PO4
+    .control-group
+      = f.label "Fosfato", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :fosfato, :step=>'0.1', :class => 'number_field'
+          %span.add-on mg/L PO4
 
-  .control-group
-    = f.label "Cloro", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :cloro, :step=>'0.1', :class => 'number_field'      
-        %span.add-on mg/L Cl2
-  .control-group
-    = f.label "Turbidez", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :turbidez, :step=>'0.1', :class => 'number_field'      
-        %span.add-on NTU
-      
-  .control-group
-    = f.label "Cloretos", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :cloretos, :step=>'0.1', :class => 'number_field'            
-        %span.add-on mg/L Cl
+    .control-group
+      = f.label "Cloro", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :cloro, :step=>'0.1', :class => 'number_field'      
+          %span.add-on mg/L Cl2
+    .control-group
+      = f.label "Turbidez", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :turbidez, :step=>'0.1', :class => 'number_field'      
+          %span.add-on NTU
+        
+    .control-group
+      = f.label "Cloretos", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :cloretos, :step=>'0.1', :class => 'number_field'            
+          %span.add-on mg/L Cl
 
-  .control-group
-    = f.label "Dureza", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :dureza, :step=>'0.1', :class => 'number_field'            
-        %span.add-on mg/L CaCO3
-      
-  .control-group
-    = f.label "DQO de Campo", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :dqo_campo, :step=>'0.1', :class => 'number_field'      
-        %span.add-on mg/L O2
-      
-  .control-group
-    = f.label "Ecolli e Coliformes", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :coliformes, :step=>'0.1', :class => 'number_field'      
-        %span.add-on UfC/100 ml
-      
-  .control-group
-    = f.label "DBO a temperatura ambiente", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :dbo, :step=>'0.1', :class => 'number_field'      
-        %span.add-on mg/L O2
-      
-  .control-group
-    = f.label "Detergentes", :class => 'control-label'
-    .controls
-      .input-append
-        = f.number_field :detergentes, :step=>'0.1', :class => 'number_field'     
-        %span.add-on mg/L LAS
+    .control-group
+      = f.label "Dureza", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :dureza, :step=>'0.1', :class => 'number_field'            
+          %span.add-on mg/L CaCO3
+        
+    .control-group
+      = f.label "DQO de Campo", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :dqo_campo, :step=>'0.1', :class => 'number_field'      
+          %span.add-on mg/L O2
+        
+    .control-group
+      = f.label "Ecolli e Coliformes", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :coliformes, :step=>'0.1', :class => 'number_field'      
+          %span.add-on UfC/100 ml
+        
+    .control-group
+      = f.label "DBO a temperatura ambiente", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :dbo, :step=>'0.1', :class => 'number_field'      
+          %span.add-on mg/L O2
+        
+    .control-group
+      = f.label "Detergentes", :class => 'control-label'
+      .controls
+        .input-append
+          = f.number_field :detergentes, :step=>'0.1', :class => 'number_field'     
+          %span.add-on mg/L LAS
 
-  .control-group
-    = f.label "Observações", :class => 'control-label'
-    .controls
-      = f.text_area :info, :class => 'text_area'
+    .control-group
+      = f.label "Observações", :class => 'control-label'
+      .controls
+        = f.text_area :info, :class => 'text_area'
 
-  .form-actions
-    = f.hidden_field :pessoa_id, :value => current_user.id
-    = f.hidden_field :escola_id, :value => current_user.escola.id
-    = f.submit "Salvar", :class => 'btn btn-primary'
+    .form-actions
+      = f.hidden_field :pessoa_id, :value => @coleta.id ? @coleta.pessoa.id : current_user.id
+      = f.hidden_field :escola_id, :value =>  @coleta.id ? @coleta.escola.id : current_user.escola.id
+      = f.submit "Salvar", :class => 'btn btn-primary'
